force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_les_no__c.field-meta.xml
<CustomField>
    <fullName>Cu_les_no__c</fullName>
    <label>Cuáles no?</label>
    <type>TextArea</type>
</CustomField>