force-app/main/default/objects/Formulario_MarketingCloud__c/fields/cu_les_son_los_motivos_de_alternar__c.field-meta.xml
<CustomField>
    <fullName>cu_les_son_los_motivos_de_alternar__c</fullName>
    <label>¿Cuáles son los motivos de alternar?</label>
    <type>TextArea</type>
</CustomField>