force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ndo_la_presentar__c.field-meta.xml
<CustomField>
    <fullName>Cu_ndo_la_presentar__c</fullName>
    <label>¿Cuándo la presentará?</label>
    <type>Date</type>
</CustomField>