force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ndo_la_presentara__c.field-meta.xml
<CustomField>
    <fullName>Cu_ndo_la_presentara__c</fullName>
    <inlineHelpText>Si la respuesta a &quot;La OS le cubre la formula?&quot; fue &quot;Aun no lo presente&quot;, contestar esta pregunta</inlineHelpText>
    <label>¿Cuándo la presentará?</label>
    <type>Date</type>
</CustomField>