force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ndo_lo_consume__c.field-meta.xml
<CustomField>
    <fullName>Cu_ndo_lo_consume__c</fullName>
    <label>¿Cuándo lo consume?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mañana</fullName>
            </value>
            <value>
                <fullName>Mediodía</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Noche</fullName>
            </value>
            <value>
                <fullName>Entre comidas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>