force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_botellas_consume_por_d_a__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_botellas_consume_por_d_a__c</fullName>
    <label>¿Cuántas botellas consume por día?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>