force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_botellas_le_autorizaron__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_botellas_le_autorizaron__c</fullName>
    <label>¿Cuántas botellas le autorizaron x mes?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Le_aprobaron_el_producto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 10</fullName>
            </value>
            <value>
                <fullName>10 a 20</fullName>
            </value>
            <value>
                <fullName>20 a 30</fullName>
            </value>
            <value>
                <fullName>30 a 40</fullName>
            </value>
            <value>
                <fullName>40 a 50</fullName>
            </value>
            <value>
                <fullName>50 a 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>