force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_botellas_le_prescribi_su_medico__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_botellas_le_prescribi_su_medico__c</fullName>
    <description>Cuántas botellas le prescribió/sugirió su médico por mes?</description>
    <inlineHelpText>Cuántas botellas le prescribió/sugirió su médico por mes?</inlineHelpText>
    <label>Cuántas botellas le prescribió su medico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 10</fullName>
            </value>
            <value>
                <fullName>10 a 20</fullName>
            </value>
            <value>
                <fullName>20 a 30</fullName>
            </value>
            <value>
                <fullName>30 a 40</fullName>
            </value>
            <value>
                <fullName>40 a 50</fullName>
            </value>
            <value>
                <fullName>50 a 60</fullName>
            </value>
            <value>
                <fullName>60 a 70</fullName>
            </value>
            <value>
                <fullName>70 a 80</fullName>
            </value>
            <value>
                <fullName>80 a 90</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>