force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_horas_de_sue_o_por_d_a_realiza__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_horas_de_sue_o_por_d_a_realiza__c</fullName>
    <label>¿Cuántas horas de sueño por día realiza?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>