force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_latas_por_mes_le_autorizan__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_latas_por_mes_le_autorizan__c</fullName>
    <label>Cuántas latas por mes le autorizan?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OS_cubre__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>