force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_ntas_regurgitaciones_tiene_por_d_a__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas_regurgitaciones_tiene_por_d_a__c</fullName>
    <label>¿Cuántas regurgitaciones tiene por día?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>3-6</fullName>
            </value>
            <value>
                <fullName>7-12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>