force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_nto_apoyo_recibe_del_centro_de_dieta__c.field-meta.xml
<CustomField>
    <fullName>Cu_nto_apoyo_recibe_del_centro_de_dieta__c</fullName>
    <label>¿Cuánto apoyo recibe del centro dieta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recibe mucho apoyo</fullName>
            </value>
            <value>
                <fullName>Recibe apoyo pero no le sirve</fullName>
            </value>
            <value>
                <fullName>No recibe apoyo y lo necesita</fullName>
            </value>
            <value>
                <fullName>No recibe apoyo y no le interesa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>