force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_nto_tiempo_demor_la_aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cu_nto_tiempo_demor_la_aprobaci_n__c</fullName>
    <label>¿Cuánto tiempo demoró la aprobación?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 semana o menos</fullName>
            </value>
            <value>
                <fullName>Entre 1 y 2 semanas</fullName>
            </value>
            <value>
                <fullName>Entre 3 y 4 semanas</fullName>
            </value>
            <value>
                <fullName>Más de 1 mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>