force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cu_nto_tiempo_demor_la_OS__c.field-meta.xml
<CustomField>
    <fullName>Cu_nto_tiempo_demor_la_OS__c</fullName>
    <label>¿Cuánto tiempo demoró la aprobación OS??</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menos de 1 semana</fullName>
            </value>
            <value>
                <fullName>De 1 a 2 semanas</fullName>
            </value>
            <value>
                <fullName>De 2 a 3 semanas</fullName>
            </value>
            <value>
                <fullName>Más de 3 semanas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>