force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual__c.field-meta.xml
<CustomField>
    <fullName>Cual__c</fullName>
    <label>¿Cuál?</label>
    <type>TextArea</type>
</CustomField>