force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_dificultad_tiene__c.field-meta.xml
<CustomField>
    <fullName>Cual_dificultad_tiene__c</fullName>
    <label>¿Cuál dificultad tiene?</label>
    <type>TextArea</type>
</CustomField>