force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_es__c.field-meta.xml
<CustomField>
    <fullName>Cual_es__c</fullName>
    <label>¿Cual es?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>