force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_es_la_patologia__c.field-meta.xml
<CustomField>
    <fullName>Cual_es_la_patologia__c</fullName>
    <formula>TEXT(Tratamiento__r.Patologia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Cuál es la patologia?</label>
    <type>Text</type>
</CustomField>