force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_es_su_experiencia_con_el_producto_y__c.field-meta.xml
<CustomField>
    <fullName>Cual_es_su_experiencia_con_el_producto_y__c</fullName>
    <inlineHelpText>Hablar no solo del producto sino tambien del sabor del mismo.</inlineHelpText>
    <label>Cual es su experiencia con el producto?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>