force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_formula_para_llevar_consume__c.field-meta.xml
<CustomField>
    <fullName>Cual_formula_para_llevar_consume__c</fullName>
    <label>Cuál fórmula para llevar consume</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>