force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_s__c.field-meta.xml
<CustomField>
    <fullName>Cual_s__c</fullName>
    <label>¿Cuáles?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ha_dejado_de_consumir_alg_n_alimento_e__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LP-DRINK X 400 G</fullName>
            </value>
            <value>
                <fullName>LOPROFIN MIX X 500 GR</fullName>
            </value>
            <value>
                <fullName>LOPROFIN SUSTITUTO DE HUEVO X 2 SOBRES X</fullName>
            </value>
            <value>
                <fullName>LP SPAGHETTI 500 GR. UKESFRNL</fullName>
            </value>
            <value>
                <fullName>LOPROFIN ANIMAL PASTA 6x500 GR.</fullName>
            </value>
            <value>
                <fullName>LOPROFIN CEREAL LOOPS X 375 GR</fullName>
            </value>
            <value>
                <fullName>LOPROFIN FISILLE 6x500 GR.</fullName>
            </value>
            <value>
                <fullName>LOPROFIN GALLETITAS DE AGUA X 150 GR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>