force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cual_sabor_de_Fortisip_Compact_Protein_e__c.field-meta.xml
<CustomField>
    <fullName>Cual_sabor_de_Fortisip_Compact_Protein_e__c</fullName>
    <label>Cual sabor de Fortisip esta utilizando?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutro</fullName>
            </value>
            <value>
                <fullName>Frutos rojos</fullName>
            </value>
            <value>
                <fullName>Jengibre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>