force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuando_consume_el_producto__c.field-meta.xml
<CustomField>
    <fullName>Cuando_consume_el_producto__c</fullName>
    <description>¿En qué momento del día consume el producto?</description>
    <inlineHelpText>Si respondió distensión abdominal/diarrea , vómitos o no tolera el sabor o el aroma:
¿En qué momento del día consume el producto?
Registrar momento del día</inlineHelpText>
    <label>¿Cuando consume el producto?</label>
    <type>TextArea</type>
</CustomField>