force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuando_la_iniciaron_iniciaran__c.field-meta.xml
<CustomField>
    <fullName>Cuando_la_iniciaron_iniciaran__c</fullName>
    <label>¿Cuándo la iniciaron/iniciarán?</label>
    <type>Date</type>
</CustomField>