force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuando_present_el_tramite__c.field-meta.xml
<CustomField>
    <fullName>Cuando_present_el_tramite__c</fullName>
    <inlineHelpText>¿Cuando presentó el trámite?</inlineHelpText>
    <label>¿Cuando presentó el trámite?</label>
    <type>Date</type>
</CustomField>