force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuando_se_lo_diagnosticaron__c.field-meta.xml
<CustomField>
    <fullName>Cuando_se_lo_diagnosticaron__c</fullName>
    <label>¿Cuándo se lo diagnosticaron??</label>
    <type>Date</type>
</CustomField>