force-app/main/default/objects/Formulario_MarketingCloud__c/fields/cuantas_convulciones_dia_tiene__c.field-meta.xml
<CustomField>
    <fullName>cuantas_convulciones_dia_tiene__c</fullName>
    <inlineHelpText>En promedio, ¿cuántas convulciones/día tiene?</inlineHelpText>
    <label>¿Cuántas convulsiones/día tiene?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>