force-app/main/default/objects/Formulario_MarketingCloud__c/fields/cuantas_convulciones_tiene__c.field-meta.xml
<CustomField>
    <fullName>cuantas_convulciones_tiene__c</fullName>
    <inlineHelpText>En promedio, ¿cuántas convulciones tiene?</inlineHelpText>
    <label>¿Cuántas convulsiones tiene?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>