force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuantas_convulsiones_por_dia_tenia_antes__c.field-meta.xml
<CustomField>
    <fullName>Cuantas_convulsiones_por_dia_tenia_antes__c</fullName>
    <inlineHelpText>¿Cuántas convulsiones en promedio por día presentaba  antes de comenzar el tratamiento?</inlineHelpText>
    <label>Convulsiones promedio por día antes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>