force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuantas_drogas_antiepilepticas_probo__c.field-meta.xml
<CustomField>
    <fullName>Cuantas_drogas_antiepilepticas_probo__c</fullName>
    <inlineHelpText>¿Cuántas drogas antiepilépticas probó hasta llegar a la Dieta Cetogénica?</inlineHelpText>
    <label>¿Cuántas drogas antiepilépticas probó?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>