force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuantas_veces__c.field-meta.xml
<CustomField>
    <fullName>Cuantas_veces__c</fullName>
    <label>¿Cuántas veces?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>