force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuanto_consume_x_dia__c.field-meta.xml
<CustomField>
    <fullName>Cuanto_consume_x_dia__c</fullName>
    <description>¿En qué cantidades consume el producto cada vez?</description>
    <inlineHelpText>¿En qué cantidades consume el producto cada vez? Registrar volumen de ingesta por vez</inlineHelpText>
    <label>¿Cuanto consume x dia?</label>
    <type>TextArea</type>
</CustomField>