force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuanto_demor_el_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Cuanto_demor_el_tratamiento__c</fullName>
    <inlineHelpText>Si la respuesta a &quot;La OS le cubre la formula?&quot; fue &quot;SI&quot;, contestar esta pregunta</inlineHelpText>
    <label>Cuanto demoro la aprobacion?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menos de 1 semana</fullName>
            </value>
            <value>
                <fullName>1 semana</fullName>
            </value>
            <value>
                <fullName>2 semanas</fullName>
            </value>
            <value>
                <fullName>de 3 a 4 semanas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>