force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuanto_fue_el_descuento__c.field-meta.xml
<CustomField>
    <fullName>Cuanto_fue_el_descuento__c</fullName>
    <label>¿Cuanto fue el descuento?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Le_aprobaron_el_producto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>