force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuanto_tiempo_demoro_la_aprobacion_OS__c.field-meta.xml
<CustomField>
    <fullName>Cuanto_tiempo_demoro_la_aprobacion_OS__c</fullName>
    <inlineHelpText>¿Cuánto tiempo demoró la aprobación OS?</inlineHelpText>
    <label>¿Cuánto tiempo demoró la aprobación OS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 semana o menos</fullName>
            </value>
            <value>
                <fullName>Entre 1 semana y 2 semanas</fullName>
            </value>
            <value>
                <fullName>Entre 3 y 4 semanas</fullName>
            </value>
            <value>
                <fullName>Más de 1 mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>