force-app/main/default/objects/Formulario_MarketingCloud__c/fields/cuantos_packs__c.field-meta.xml
<CustomField>
    <fullName>cuantos_packs__c</fullName>
    <label>Cuantos packs le indicaron por mes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15_packs</fullName>
                <label>15 packs</label>
            </value>
            <value>
                <fullName>1 Pack</fullName>
            </value>
            <value>
                <fullName>2 Packs</fullName>
            </value>
            <value>
                <fullName>3 Packs</fullName>
            </value>
            <value>
                <fullName>4 Packs</fullName>
            </value>
            <value>
                <fullName>5 Packs</fullName>
            </value>
            <value>
                <fullName>6 Packs</fullName>
            </value>
            <value>
                <fullName>7 Packs</fullName>
            </value>
            <value>
                <fullName>8 Packs</fullName>
            </value>
            <value>
                <fullName>9 Packs</fullName>
            </value>
            <value>
                <fullName>10 Packs</fullName>
            </value>
            <value>
                <fullName>11 Packs</fullName>
            </value>
            <value>
                <fullName>12 Packs</fullName>
            </value>
            <value>
                <fullName>13 Packs</fullName>
            </value>
            <value>
                <fullName>14 Packs</fullName>
            </value>
            <value>
                <fullName>1 a 10</fullName>
                <isActive>false</isActive>
                <label>1 a 10</label>
            </value>
            <value>
                <fullName>10 a 20</fullName>
                <isActive>false</isActive>
                <label>10 a 20</label>
            </value>
            <value>
                <fullName>15 Packs</fullName>
                <isActive>false</isActive>
                <label>15 Packs</label>
            </value>
            <value>
                <fullName>20 a 30</fullName>
                <isActive>false</isActive>
                <label>20 a 30</label>
            </value>
            <value>
                <fullName>30 a 40</fullName>
                <isActive>false</isActive>
                <label>30 a 40</label>
            </value>
            <value>
                <fullName>40 a 50</fullName>
                <isActive>false</isActive>
                <label>40 a 50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>