force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Nombre y apellido del paciente</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta debe ser de un paciente (filtro)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care, Paciente Regular</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Formularios Marketing Cloud</relationshipLabel>
    <relationshipName>Formularios_MarketingCloud</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>