force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuenta_con_alg_n__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_alg_n__c</fullName>
    <label>¿Algún suplemento para el tratamiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SÍ</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>