force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuenta_con_la_documentaci_n_medica__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_la_documentaci_n_medica__c</fullName>
    <label>¿Cuenta con la documentación medica?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>