force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuenta_con_la_indicaci_n_m_dica_para_pr__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_la_indicaci_n_m_dica_para_pr__c</fullName>
    <label>Tiene la indicación medica para la OSS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>