force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuenta_con_receta_de_dicha_indicaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_receta_de_dicha_indicaci_n__c</fullName>
    <inlineHelpText>¿Cuenta con la receta de dicha indicación?</inlineHelpText>
    <label>¿Cuenta con receta de dicha indicación?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>