force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuentenos_el_motivo_por_el_cual_no_pudo__c.field-meta.xml
<CustomField>
    <fullName>Cuentenos_el_motivo_por_el_cual_no_pudo__c</fullName>
    <description>Confirmación retiro por farmacia - Zetti</description>
    <inlineHelpText>¿Cuéntenos el motivo por el cual no pudo retirarlo la primera vez?</inlineHelpText>
    <label>¿Cuéntenos el motivo?</label>
    <type>TextArea</type>
</CustomField>