force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuidador_principal__c.field-meta.xml
<CustomField>
    <fullName>Cuidador_principal__c</fullName>
    <label>Cuidador principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madre, padre o tutor</fullName>
            </value>
            <value>
                <fullName>Otro familiar</fullName>
            </value>
            <value>
                <fullName>Cuidador profesional</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>