force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cuidador_requiere_soporte__c.field-meta.xml
<CustomField>
    <fullName>Cuidador_requiere_soporte__c</fullName>
    <inlineHelpText>Identificar si el cuidador requiere algún tipo de soporte emocional, psicologico, informativo o con capacitaciones, económico, legal</inlineHelpText>
    <label>Cuidador: requiere soporte</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>